fix: remove input bg overlap on focus border (#DS-4950)

--- a/packages/components/form-field/_form-field-theme.scss
+++ b/packages/components/form-field/_form-field-theme.scss
@@ -46,10 +46,13 @@
             //https://css-tricks.com/almanac/selectors/a/autofill/
             &:-webkit-autofill,
             &:-webkit-autofill:hover,
-            &:-webkit-autofill:focus {
-                -webkit-box-shadow: inset 0 0 0 40rem var(--kbq-form-field-states-autofill-background);
+            &:-webkit-autofill:focus,
+            &:-internal-autofill-selected {
+                -webkit-box-shadow: inset 0 0 0 40rem var(--kbq-foreground-white);
                 -webkit-text-fill-color: var(--kbq-form-field-states-autofill-text);
                 caret-color: var(--kbq-form-field-states-autofill-text);
+                position: relative;
+                z-index: -1;
             }
         }
 
